Propagate warning error code from dBASE export, tdf#130020

Long time existing code cleared all warnings set by the actual
export routine. I could not figure out why this ever was done. It
started short after the initial OOo import with

    commit 0ec1e9cbdfb4be18ea18b6b9be567d23bff5963f
    CommitDate: Fri Oct 27 18:00:10 2000 +0000

        dBase export: don't set warning errorcodes

that did not set warnings at the medium anymore without giving a
rationale.

Change-Id: I0f26d0644890c53557076ac7b99ffe7c8756a047